Fix css on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,23 @@
-body {
+* {
+  box-sizing: border-box;
+}
+
+#root {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  justify-content: center;
   background-color: black;
   color: limegreen;
   font-family: monospace;
   padding-top: 30vh;
+  min-height: 100vh;
 }
 
 #main {
-  width: 500px;
+  width: 100%;
   max-width: 500px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 h1 {
